k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flask-demo-ingress
spec:
  rules:
    - host: flask-demo.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-python-service
              servicePort: 5000
